# python-project-52

./: Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: cc-reporter.yml
task_manager/: __init__.py  mixins.py  settings.py  urls.py  views.py
task_manager/apps/: tools.py
task_manager/apps/labels/: forms.py  models.py  urls.py  views.py
task_manager/apps/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/apps/tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/apps/users/: forms.py  models.py  views.py
task_manager/statuses/: forms.py  models.py  views.py
task_manager/statuses/migrations/: 0002_alter_status_name.py
task_manager/templates/: footer.html  index.html  login.html  navbar.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/layouts/: footer.html  frame.html  navbar.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  details.html  index.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/tests/: test_homepage.py  tests.py
task_manager/tests/fixtures/: labels_database.json  statuses_database.json  tasks_database.json  tasks_database_2.json  user.json  users_database.json
task_manager/tests/homepage_tests/: test_homepage.py
task_manager/tests/labels_tests/: test_create_label.py  (+3 more)
task_manager/users/: forms.py  models.py  urls.py  views.py
(+23 files in other folders)
