[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ai_gelios <ai_gelios@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
django-bootstrap5 = "^23.4"
dj-database-url = "^2.1.0"
django-extensions = "^3.2.3"
django-filter = "^23.5"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
rollbar = "^1.0.0"
python-dotenv = "^1.0.1"
whitenoise = "^6.6.0"
ipython = "^8.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^7.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
